# ksp_autopilot_cli

./: Cargo.toml  README.md  justfile
src/: ascent.rs  docking.rs  execute_node.rs  flight_computer.rs  landing.rs  main.rs  maneuver.rs  orbital_mechanics.rs  rendevous.rs  rendezvous.rs  root_finding.rs  trajectory_prediction.rs  translation.rs  util.rs
src/commands/: adjust_plane.rs  ascent.rs  circularize.rs  dock.rs  execute_node.rs  land.rs  mod.rs  rendevous.rs  rendezvous.rs  return_to_parent.rs  transfer.rs  tune_closest_approach.rs
src/commands/scripts/: bsfp.rs  mod.rs
